--- a/practice/css/A-1.css
+++ b/practice/css/A-1.css
@@ -39,6 +39,7 @@ nav{
     right: 0;
     width: 600px;
     height: 150px;
+    z-index: 5;
 }
 ul.mainMenu > li{
     float: left;
@@ -68,10 +69,46 @@ ul.subMenu{
 
 /* slide 영역 */
 #slideArea{
+    position: relative;
     width: 100%;
     height: 300px;
-    background-color: yellow;
+    overflow: hidden;
 }
+.slide{
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    transition: all 0.6s;
+}
+.text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: rgba(255,255,255,0.5);
+    text-align: center;
+    line-height: 50px;
+    font-size: 24px;
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+}
+.img1{
+    width: 100%;
+    height: 300px;
+    background-color: pink;
+}
+.img2{
+    width: 100%;
+    height: 300px;
+    background: greenyellow;
+}
+.img3{
+    width: 100%;
+    height: 300px;
+    background-color: aqua;
+}
+
 
 /* container 영역 */
 #container{
